Added maven assembly plugin to package runnable jar-file & run-script

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java-sdk.version>1.8</java-sdk.version>
         <maven-compiler.version>3.3</maven-compiler.version>
+        <maven-assembly.version>2.6</maven-assembly.version>
         <slf4j.version>1.7.21</slf4j.version>
     </properties>
     <dependencies>
@@ -39,6 +40,31 @@
                     <target>${java-sdk.version}</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>${maven-assembly.version}</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>no.taardal.snake.Game</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>bin</descriptorRef>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin> 
         </plugins>
     </build>
 </project>
